# memekoin

./: .gitignore  AUTHENTICATION_GUIDE.md  Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  Please correct my project and clean up a.md  README.md  dev.sh  fix-crossorigin.js  package-lock.json  package.json  tailwind.config.js  wrangler.toml
.augment/rules/imported/rust/: main.md
.augment/rules/imported/rust/complex/: workspace.md
.augment/rules/imported/rust/core/: api-design.md  code-quality.md  dependencies.md  design-patterns.md  performance.md  security.md  type-system.md
.augment/rules/imported/rust/features/: axum.md  cli.md  concurrency.md  configuration.md  database.md  http-client.md  observability.md  protobuf-grpc.md  tools-and-config.md  utilities.md
.augment/rules/imported/rust/quality/: error-handling.md  testing.md
.augment/rules/imported/rust/simple/: single-crate.md
.claude/: settings.local.json
assets/: _headers  sw.js
axum-worker/: .env  .gitignore  Cargo.toml  DATABASE_INTEGRATION.md  TRADING_README.md  create_demo_user.sql  dev.ps1  wrangler.toml
axum-worker/.claude/: settings.local.json
axum-worker/migration/: Cargo.toml
axum-worker/migration/schema/: users.sql
axum-worker/migration/src/: lib.rs  m20250729_194734_create_users_table.rs
axum-worker/src/: auth.rs  error.rs  lib.rs  router.rs  state.rs  utils.rs
axum-worker/src/client/: axiom_client.rs  mod.rs  neon_client.rs  neon_client_v2.rs
axum-worker/src/clients/: mod.rs  neon.rs  trading.rs
axum-worker/src/database/: mod.rs  test_connection.rs
axum-worker/src/dto/: auth.rs  market_data.rs  mod.rs  oauth.rs  response.rs  simple_oauth.rs  trading.rs  user.rs
axum-worker/src/entity/: account_profiles.rs  account_sessions.rs  audit_log.rs  market_data.rs  mod.rs  prelude.rs  providers.rs  role_type.rs  session.rs  token_scopes.rs  token_types.rs  tokens.rs  trading.rs  user.rs  user_accounts.rs  user_session.rs  users.rs
axum-worker/src/handler/: auth.rs  auth_improved.rs  axiom.rs  health.rs  market_data.rs  mod.rs  oauth_callback.rs  oauth_frontend.rs  trading.rs
axum-worker/src/middleware/: auth.rs  axum_session_store.rs  cors.rs  mod.rs  session.rs  wasm_session.rs
axum-worker/src/models/: user.rs
axum-worker/src/repo/: user.rs
axum-worker/src/repository/: auth.rs  mod.rs  session.rs  user.rs
axum-worker/src/routes/: api_routes.rs  auth.rs  auth_routes.rs  health.rs  mod.rs  router.rs
axum-worker/src/service/: auth.rs  auth_service.rs  auth_simple.rs  axiom.rs  base.rs  gmail.rs  market_data.rs  mod.rs  oauth.rs  oauth_simple.rs  session.rs  trading.rs  user_service.rs
axum-worker/src/util/: mod.rs  neon_client.rs
axum-worker/src/utils/: error.rs
database/: README.md  docker-compose.yml  drop_all.sql  fullSchemaa_.sql  reset_db.ps1  verify_database.sql
leptos-wasm/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  tailwind.config.js
leptos-wasm/src/: auth.rs  lib.rs  main.rs
leptos-wasm/src/components/: login.rs  market_data.rs  mod.rs  navbar.rs
leptos-wasm/src/components/auth/: auth_provider.rs  login_button.rs  login_modal.rs  logout_button.rs  mod.rs  simple_auth_provider.rs  user_profile.rs
leptos-wasm/src/components/layout/: footer.rs  header.rs  mod.rs  navigation.rs  page_template.rs  protected_route.rs
leptos-wasm/src/context/: auth.rs
leptos-wasm/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  oauth_callback.rs
leptos-wasm/src/services/: api_client.rs  auth.rs  auth_service.rs  axiom.rs  base.rs  mod.rs
leptos-wasm/src/types/: auth.rs
lighthouse/: 127.0.0.1_8787-20250722T174858.html  deployed-test.json  deployed-updated.json  desktop-test.json  koin.qias-webdev.workers.dev-20250722T181302.html  local-current-fixed.json  local-simplified.json  mobile-test.json
plan/: IMPLEMENTATION_STATUS.md  README.md  References.md  api-specs.md  architecture.md  deployment.md  phase-1-foundation.md  phase-2-authentication.md  phase-3-api.md  phase-4-frontend.md  security.md  state-architecture.md
site/pkg/: koin.css
src/: app.rs  lib.rs  main.rs
src/app/: mod.rs  router.rs  shell.rs
src/components/: market_overview.rs  mod.rs  portfolio_display.rs  trading_card.rs  trading_dashboard.rs  trading_interface.rs
src/components/ui/: button.rs  card.rs  layout.rs  mod.rs
src/pages/: home.rs  market.rs  mod.rs  trading.rs
src/server/: functions.rs  mod.rs  trading.rs
src/trading/: mod.rs  types.rs
src/utils/: format.rs  mod.rs  validation.rs
style/: compiled.css  tailwind.css
