[package]
name = "www-example-com"
version = "0.1.0"
edition = "2024"
authors = ["shellsort <cl.mertig@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-wasm = "0.2"

# HTTP client and serialization
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
urlencoding = "2.1"

# Cookie management and utilities
leptos-use = "0.16"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Location",
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Storage",
  "Navigator"
] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
